tests/derive_errors/struct/tuple_with_wrong_number_of_fields.rs
#[derive(jtd_derive::JsonTypedef)]
struct Tuple(u32, String);

fn main() {}
